    useful when generating SMT-LIB files with Mirabelle.
  - Added a record parameter to function SMT_Solver.add_solver that
    indicates whether the solver is a dummy or not, and whether it
    should be used by default in Sledgehammer or not.
    Minor INCOMPATIBILITY.
  - Splitted option "smt_debug_files" into "smt_problem_dest_dir" and
    "smt_proof_dest_dir". Minor INCOMPATIBILITY.

* try0:
  - Proof methods can now be dynamically added with the function
    Try0.register_proof_method and retrieved (e.g., to call them from
    Isabelle/ML) with the function Try0.get_proof_method.
  - Added the option "try0_schedule" to control which proof methods get
    tried in which order. It accepts a list of proof method names
    separated by either a space, meaning parallel evaluation,
    or a semicolon, meaning sequential evaluation. The schedule is
    interpreted as list of groups executed in sequence; in each group,
    the proof methods are executed in parallel. INCOMPATIBILITY.
  - Added the option "try0_default_timeout" to control the default
    timeout (in seconds).
  - Changed the default timeout from 5 to 2 seconds.
    Minor INCOMPATIBILITY.

* Sledgehammer:
  - Don't suggest proofs by "smt (z3)" anymore.
  - Added proof methods to default schedule; it now subsumes the "try0"
    command. Minor INCOMPATIBILITY.
  - Tuned the default schedule. Minor INCOMPATIBILITY.

* Theory "HOL.Fun":
  - Added lemmas.
      antimonotone_on_inf_fun
      antimonotone_on_sup_fun
      mono_on_invE
      mono_on_strict_invE
      monotone_on_inf_fun
      monotone_on_sup_fun
      strict_mono_on_eq
      strict_mono_on_less
      strict_mono_on_less_eq
  - Removed lemmas. Minor INCOMPATIBILITY.
      mono_on_greaterD (use mono_invE instead)
      subset_inj_on (use inj_on_subset)

* Theory "HOL.Relation":
  - Changed definition of predicate refl_on to not constrain the domain
    and range of the relation. To get the old semantics, explicitely use